Reflecting recent spec changes.